--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -56,7 +56,7 @@ It is important to realize that the SDW order is not directly accessible through
 \begin{figure}
 	\centering
 \IncludeGraphics[width=0.78\textwidth]{experimental2}
-\caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the PLD amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the PLD in the constructive and destructive pump-pump delay conditions, similar to panels (c, d) of Fig.~\ref{fig:Cr_experimental}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The dashed red line marks the arrival time of second pulse. In these measurements the SDW is fully melted by the first pulse, and the timing of the second pulse has almost no influence on the behavior.}
+\caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the PLD amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the PLD in the constructive and destructive pump-pump delay conditions, similar to panels (c, d) of Fig.~\ref{fig:Cr_experimental1}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The dashed red line marks the arrival time of second pulse. In these measurements the SDW is fully melted by the first pulse, and the timing of the second pulse has almost no influence on the behavior.}
 \end{figure}
 \\\\
 We can observe that the PLD has an oscillation time period of approximately 450 fs, and a damping time of around 3 ps.
@@ -120,7 +120,7 @@ The evolution of the temperatures can be described by the so-called two temperat
 \end{align}
 with $k$ the heat transfer rate, and $C_L$, $C_b$ the heat capacities of the electronic degrees of freedom and of the bath, respectively.
 The dots signify time derivatives.
-As one could expect, we find that the heat capacity of the bath is larger than that of the electronic system by an order of magnitude, as will be confirmed when we detail the model parameters in the Methods Section~\cite{sec:Cr_Methods}.
+As one could expect, we find that the heat capacity of the bath is larger than that of the electronic system by an order of magnitude, as will be confirmed when we detail the model parameters in the Methods Section~\ref{sec:Cr_Methods}.
 Finally, the heat injected by the pulses is modeled by a Gaussian $Q_{ph}(t) = A e^{\frac{-(t - \tau)^2}{\xi^2}}$, with $A$ the strength, $\xi$ the duration and $\tau$ the time delay.
 \\\\
 The changes to $T_L$ through heating and subsequent cooling affects the SDW amplitude $L$ and indirectly the PLD one $y$, as described by a Landau-type theory~\cite{Khomskii2010}.
